# validation

./: .gitignore  ChangeLog.md  Example.hs  LICENSE  README.md  package.yaml  stack.yaml  validation.cabal
src/: Validation.hs
