cabal-version:      1.12
name:               validation
version:            0.1.0
license:            MIT
license-file:       LICENSE
maintainer:         Adjoint Inc (info@adjoint.io)
homepage:           https://github.com/adjoint-io/validation#readme
bug-reports:        https://github.com/adjoint-io/validation/issues
synopsis:           Validation
description:        Validation
category:           Web
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adjoint-io/validation

library
  exposed-modules:    Validation
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:        -freverse-errors -O2 -Wall
  build-depends:
      aeson                 >=1.4.0.0  && <1.6
    , base                  >=4.10     && <5
    , protolude             >=0.2      && <0.4
    , regex-base            >=0.94.0.0 && <0.95
    , regex-tdfa            >=1.3.1.0  && <1.4
    , scientific            >=0.3.6.2  && <0.4
    , text                  >=1.2.0.0  && <1.3
    , unordered-containers  >=0.2.0.0  && <0.3

test-suite validation-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:        -freverse-errors -O2 -Wall -main-is Main
  build-depends:
      aeson                 >=1.4.0.0  && <1.6
    , base                  >=4.10     && <5
    , protolude             >=0.2      && <0.4
    , QuickCheck            >=2.13     && <2.15
    , quickcheck-instances  >=0.3.22   && <0.4
    , regex-base            >=0.94.0.0 && <0.95
    , regex-tdfa            >=1.3.1.0  && <1.4
    , scientific            >=0.3.6.2  && <0.4
    , tasty                 >=1.2.0    && <1.4
    , tasty-discover        >=4.2.1    && <4.3
    , tasty-hunit           >=0.10.0.0 && <0.11
    , tasty-quickcheck      >=0.10.0.0 && <0.11
    , text                  >=1.2.0.0  && <1.3
    , unordered-containers  >=0.2.0.0  && <0.3
    , validation
